--- a/css/style.css
+++ b/css/style.css
@@ -761,6 +761,10 @@ ul {
 
 /*ESTILOS FOOTER*/
 #footer {
+  background-color: grey;
+  padding: 20px 15px;
+  text-align: center;
+  /*display: flex;
   position: relative;
   bottom: 0;
   left: 0;
@@ -768,65 +772,117 @@ ul {
   width: 100%;
   height: auto;
   background-color: grey;
-  display: flex;
   justify-content: center;
   text-align: center;
   align-items: center;
   flex-direction: column;
-  color: white;
-  margin-top: auto;
+
+  margin: 0 auto;*/
+  /*margin-top: auto;*/
 }
 
 /*FOOTER LOGO*/
 .footer-logo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px;
 }
 
+.footer-logo-picture {
+  margin-bottom: 15px;
+}
+
+/*
+.footer-logo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    margin-bottom: 15px;
+}*/
 .footer-logo-picture img {
-  padding: 2rem 0;
-  max-width: 10%;
+  width: 200px;
   height: auto;
+  /*background-color: #ccc;*/
+  display: inline-block;
+  border-radius: 8px;
+  line-height: 80px;
+  font-size: 16px;
+  color: #666;
+  font-weight: bold;
+  text-align: center;
 }
 
+/*.footer-logo-picture img {
+
+    width: 80px;
+    height: 80px;
+    background-color: #ccc;
+    display: inline-block;
+    border-radius: 8px;
+    line-height: 80px;
+    font-size: 16px;
+    color: #666;
+    font-weight: bold;
+    text-align: center;
+
+
+    /*padding: 2rem 0;
+    max-width: 10%;
+    height: auto;
+}*/
 /*FOOTER LINKS*/
 .footer-links-ul {
-  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 15px;
+  padding: 0px 0px 30px;
+  /*list-style: none;
   padding: 0;
   margin: 15px 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;*/
 }
 
-.footer-links-ul li {
-  display: inline-block;
-  margin: 0 15px;
-}
-
-/* .footer-links-ul li a:hover */
-.footer-links-ul li a {
+.footer-links-ul a {
   text-decoration: none;
   color: white;
-  transition: color 0.3s;
+  font-size: 17px;
+  /*display: inline-block;
+  margin: 0 15px;*/
 }
 
-.footer-links-ul li a:hover {
+.footer-links-ul a:hover {
   color: black;
-  cursor: pointer;
+  transition: color 0.3s;
 }
 
 /* ICONOS DE REDES SOCIALES */
 .footer-redes {
-  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 15px;
+  /*margin-top: 20px;*/
 }
 
-.footer-redes .social-icon {
-  margin: 0 10px;
+.footer-social-icon {
+  width: 40px;
+  height: 40px;
+  /*background-color: #ccc;*/
   display: inline-block;
+  border-radius: 50%;
+  line-height: 40px;
+  font-size: 12px;
+  /*color: #666;*/
+  font-weight: bold;
+  text-align: center;
+  /*margin: 0 10px;
+  display: inline-block;*/
 }
 
-.footer-redes .social-icon img {
+.footer-social-icon img {
   width: 30px;
   height: 30px;
   transition: transform 0.3s ease;
@@ -839,10 +895,11 @@ ul {
 /* FOOTER AUTOR */
 .footer-autor {
   margin-top: 30px;
+  color: white;
 }
 
 .footer-autor h5 {
-  font-size: 20px;
+  font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -855,15 +912,35 @@ ul {
 @media (max-width: 768px) {
   /* DISEÑO RESPONSIVE DE FOOTER */
   .footer-links-ul {
-    display: block;
+    flex-direction: column;
+    gap: 10px;
   }
+  .footer-redes {
+    gap: 5px;
+  }
+  .footer-social-icon {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 10px;
+  }
+  /*
+  .footer-logo-picture {
+      margin: 0;
+  }
+
+  .footer-links-ul {
+      display: block;
+  }
+
   .footer-links-ul li {
-    margin: 10px 0;
+      margin: 10px 0;
   }
+
   .footer-redes .social-icon img {
-    width: 25px;
-    height: 25px;
-  }
+      width: 25px;
+      height: 25px;
+  }*/
   /* DISEÑO RESPONSIVE DE SERVICIOS */
   .section-grids {
     grid-template-columns: repeat(2, 1fr);
