--- a/sass/presets/_footer.scss
+++ b/sass/presets/_footer.scss
@@ -2,6 +2,13 @@
 
 
 #footer {
+    
+    background-color: grey;
+    padding: 20px 15px;
+    text-align: center;
+    
+    
+    /*display: flex;
     position: relative;
     bottom: 0;
     left: 0;
@@ -9,68 +16,139 @@
     width: 100%;
     height: auto;
     background-color: grey;
-    display: flex;
     justify-content: center;
     text-align: center;
     align-items: center;
     flex-direction: column;
-    color: white;
-    margin-top: auto;
+
+    margin: 0 auto;*/
+    /*margin-top: auto;*/
 }
 
 /*FOOTER LOGO*/
 
 .footer-logo{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px;
+}
+
+.footer-logo-picture {
+    margin-bottom: 15px;
+}
+
+
+
+/*
+.footer-logo{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+
+    margin-bottom: 15px;
+}*/
+
 
 .footer-logo-picture img {
-    padding: 2rem 0;
+    width: 200px;
+    height: auto;
+    /*background-color: #ccc;*/
+    display: inline-block;
+    border-radius: 8px;
+    line-height: 80px;
+    font-size: 16px;
+    color: #666;
+    font-weight: bold;
+    text-align: center;
+
+}
+
+
+/*.footer-logo-picture img {
+
+    width: 80px;
+    height: 80px;
+    background-color: #ccc;
+    display: inline-block;
+    border-radius: 8px;
+    line-height: 80px;
+    font-size: 16px;
+    color: #666;
+    font-weight: bold;
+    text-align: center;
+
+
+    /*padding: 2rem 0;
     max-width: 10%;
     height: auto;
-}
+}*/
 
 /*FOOTER LINKS*/
 
 .footer-links-ul {
-    list-style: none;
+
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 15px;
+    padding: 0px 0px 30px;
+
+    /*list-style: none;
     padding: 0;
     margin: 15px 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;*/
 }
 
-.footer-links-ul li{
-    display: inline-block;
-    margin: 0 15px;
-}
+.footer-links-ul a{
 
-/* .footer-links-ul li a:hover */
-.footer-links-ul li a{
     text-decoration: none;
     color: white;
-    transition: color 0.3s
+    font-size: 17px;
+
+    /*display: inline-block;
+    margin: 0 15px;*/
 }
 
-.footer-links-ul li a:hover {
+
+.footer-links-ul a:hover {
     color: black;
-    cursor: pointer;
+    transition: color 0.3s
+    /*cursor: pointer;*/
 }
+
 
 /* ICONOS DE REDES SOCIALES */
 
-.footer-redes{
-    margin-top: 20px;
+.footer-redes {
+
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 15px;
+
+    /*margin-top: 20px;*/
 }
 
-.footer-redes .social-icon{
-    margin: 0 10px;
+.footer-social-icon {
+
+    width: 40px;
+    height: 40px;
+    /*background-color: #ccc;*/
     display: inline-block;
+    border-radius: 50%;
+    line-height: 40px;
+    font-size: 12px;
+    /*color: #666;*/
+    font-weight: bold;
+    text-align: center;
+
+    /*margin: 0 10px;
+    display: inline-block;*/
+
 }
 
-.footer-redes .social-icon img{
+.footer-social-icon img{
     width: 30px;
     height: 30px;
     transition: transform 0.3s ease;
@@ -85,10 +163,11 @@
 
 .footer-autor{
     margin-top: 30px;
+    color: white;
 }
 
 .footer-autor h5{
-    font-size: 20px;
+    font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
