Mejora de la web final de Recumbre hotel v17

--- a/sass/presets/_animaciones.scss
+++ b/sass/presets/_animaciones.scss
@@ -10,3 +10,9 @@
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.grid-card-1-servi:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
