--- a/sass/presets/_mixin.scss
+++ b/sass/presets/_mixin.scss
@@ -4,6 +4,7 @@
     margin: 95px 0px;
     color: black;
     font-size: 35px;
+    width: 500px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -44,6 +45,7 @@
     margin: 95px 0px;
     color: black;
     font-size: 35px;
+    width: 500px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
