--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,80 @@ ul {
   */
 }
 
+/*ESTILOS PAGE SERVICIOS DENTRO Y FUERA DEL HOTEL*/
+.section-grids-servi {
+  display: flex;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 100px;
+  padding: 0 120px 70px 120px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.grid-card-1-servi {
+  background-color: #ffffff;
+  padding: 20px;
+  /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+  border-radius: 8px;
+  text-align: center;
+}
+
+.card-picture-wifi-servi img {
+  width: 300px;
+  height: 300px;
+  /*background-color: #cccccc;*/
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+
+.card-picture-desayuno-servi img {
+  width: 300px;
+  height: 300px;
+  /*background-color: #cccccc;*/
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+
+.card-picture-electri-servi img {
+  width: 300px;
+  height: 300px;
+  /*background-color: #cccccc;*/
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+
+.card-picture-parqueo-servi img {
+  width: 300px;
+  height: 300px;
+  /*background-color: #cccccc;*/
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+
+.card-picture-piscina-servi img {
+  width: 300px;
+  height: 300px;
+  /*background-color: #cccccc;*/
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+
+.card-picture-gimnasio-servi img {
+  width: 300px;
+  height: 300px;
+  /*background-color: #cccccc;*/
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+
+.grid-card-1-servi h2 {
+  font-size: 20px;
+  color: black;
+  opacity: 70%;
+  margin: 10px 0;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
+
 /* MAIN DE HISTORIA DEL HOTEL */
 /*.titulo-historia {
     text-align: center;
@@ -327,6 +401,7 @@ ul {
   color: black;
   margin: 30px 0px 0px 0px;
   font-family: Arial, Helvetica, sans-serif;
+  width: 300px;
 }
 
 /*ESTILOS MAIN PAGE SERVICIOS - TIPO DE CUARTOS */
@@ -335,7 +410,7 @@ ul {
   width: 100%;
   margin-top: 10px;
   min-height: 100vh;
-  padding: 100px 0;
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -382,7 +457,7 @@ ul {
 #main-acercade {
   z-index: 1;
   width: 100%;
-  margin-top: 0px;
+  margin-top: 50px;
   min-height: 100vh;
   padding: 0px 200px;
   display: flex;
@@ -400,8 +475,8 @@ ul {
   max-width: 1000px;
   /*margin: 0 auto;*/
   background: #fff;
-  padding-top: 20px;
-  padding-bottom: 200px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   border-radius: 10px;
   /*box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
   /*display: flex;
@@ -420,6 +495,20 @@ ul {
   padding: 20px; */
 }
 
+.section-acercade-v2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 70px;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  /*margin: 0 auto;*/
+  background: #fff;
+  padding-top: 100px;
+  padding-bottom: 250px;
+  border-radius: 10px;
+}
+
 .historia-textos-acercade {
   flex: 2;
   /*flex: 1;
@@ -428,7 +517,7 @@ ul {
 
 .historia-textos-acercade h4 {
   margin-bottom: 10px;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   /*text-align: left;
   margin-bottom: 1rem;
@@ -472,6 +561,25 @@ ul {
   height: auto;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+}
+
+.grid-picture-acercade-v1 {
+  flex: 1;
+  min-width: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-acercade-v1 {
+  width: 400px;
+  height: 550px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1rem;
 }
 
 /* ESTILOS MAIN PAGE OFERTAS */
@@ -564,6 +672,7 @@ ul {
   color: black;
   margin: 30px 0px 0px 0px;
   font-family: Arial, Helvetica, sans-serif;
+  width: 250px;
 }
 
 /* ESTILOS MAIN PAGE CONTACTO */
@@ -684,6 +793,7 @@ ul {
   margin: 95px 0px;
   color: black;
   font-size: 35px;
+  width: 500px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
@@ -692,6 +802,7 @@ ul {
   margin: 95px 0px;
   color: black;
   font-size: 35px;
+  width: 500px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
@@ -700,6 +811,7 @@ ul {
   margin: 95px 0px;
   color: black;
   font-size: 35px;
+  width: 500px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
@@ -724,6 +836,7 @@ ul {
   margin: 95px 0px;
   color: black;
   font-size: 35px;
+  width: 500px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
@@ -732,6 +845,7 @@ ul {
   margin: 95px 0px;
   color: black;
   font-size: 35px;
+  width: 500px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
@@ -999,7 +1113,7 @@ ul {
     width: calc(50% - 20px);
   }
   .ofertas-de-hotel {
-    width: 100%;
+    width: 300px;
     margin: 10px 0;
   }
   /* DISEÑO RESPONSIVE DE OFERTAS QUE FUERON COMENTADAS POR LOS CLIENTES */
@@ -1022,6 +1136,12 @@ ul {
 }
 
 .cuartos-de-hotel:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.grid-card-1-servi:hover {
   transform: translateY(-10px);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
